--- a/package.json
+++ b/package.json
@@ -3,22 +3,13 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/w3st-io/cardinal.git"
   },
-  "keywords": [
-    "MIT"
-  ],
+  "keywords": [],
   "author": "harpoonjs.eth",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/w3st-io/cardinal/issues"
-  },
-  "homepage": "https://github.com/w3st-io/cardinal#readme",
+  "license": "ISC",
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
