--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "flatten": "truffle-flattener ./contracts/CardindalProtocol.sol > ./contracts/flat.sol"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/w3st-io/cardinal.git"
@@ -14,6 +17,10 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.6.0",
-    "@openzeppelin/contracts-upgradeable": "^4.6.0"
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
+    "truffle-flattener": "^1.6.0"
+  },
+  "devDependencies": {
+    "hardhat": "^2.10.1"
   }
 }
